tests/baselines/reference/invalidVoidValues.errors.txt
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(2,1): error TS2322: Type '1' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(3,1): error TS2322: Type '""' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(4,1): error TS2322: Type '为真' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(7,1): error TS2322: Type '类为 E' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(8,1): error TS2322: Type 'E' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(12,1): error TS2322: Type 'C' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(16,1): error TS2322: Type 'I' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(18,1): error TS2322: Type '{ f(): 无值; }' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(21,1): error TS2322: Type '类为 M' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(24,5): error TS2322: Type 'T' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(26,1): error TS2322: Type '<T>(a: T) => 无值' is not assignable to type '无值'.


==== tests/cases/conformance/types/primitives/void/invalidVoidValues.ts (11 errors) ====
    var x: void;
    x = 1;
    ~
!!! error TS2322: Type '1' is not assignable to type '无值'.
    x = '';
    ~
!!! error TS2322: Type '""' is not assignable to type '无值'.
    x = true;
    ~
!!! error TS2322: Type '为真' is not assignable to type '无值'.
    
    enum E { A }
    x = E;
    ~
!!! error TS2322: Type '类为 E' is not assignable to type '无值'.
    x = E.A;
    ~
!!! error TS2322: Type 'E' is not assignable to type '无值'.
    
    class C { foo: string }
    var a: C;
    x = a;
    ~
!!! error TS2322: Type 'C' is not assignable to type '无值'.
    
    interface I { foo: string }
    var b: I;
    x = b;
    ~
!!! error TS2322: Type 'I' is not assignable to type '无值'.
    
    x = { f() {} }
    ~
!!! error TS2322: Type '{ f(): 无值; }' is not assignable to type '无值'.
    
    module M { export var x = 1; }
    x = M;
    ~
!!! error TS2322: Type '类为 M' is not assignable to type '无值'.
    
    function f<T>(a: T) {
        x = a;
        ~
!!! error TS2322: Type 'T' is not assignable to type '无值'.
    }
    x = f;
    ~
!!! error TS2322: Type '<T>(a: T) => 无值' is not assignable to type '无值'.